tests/invalid/module/pub_impl_not_supported.facet
trait Show;

pub impl Show for unrestricted isize;
